--- a/src/main/frontend/app-cultural/src/index.html
+++ b/src/main/frontend/app-cultural/src/index.html
@@ -6,6 +6,13 @@
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="assets/imagen/icono.ico" rel="icon" type="image/x-icon">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        crossorigin=""/>
+
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+          integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+          crossorigin=""></script>
 </head>
 <body>
 
